Tests/Errors/SimpleRecovery/Start.goal
Start
/ Minimum case: one action, one modifier, one nested recovery action.
/ Exercises the file.read Path([path] ...) | error.handle Key + Actions=[output.write ...] shape.

- read 'data.txt', on error key 404, write out "missing"
